--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.layout {
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.side-nav {
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 25%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border: 2px solid white;
+}
+
+.search-bar {
+  width: 75%;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.current-temp-display {
+  width: 75%;
+  position: fixed;
+  right: 0;
+  top: 15%;
 }
