--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,50 @@
   position: fixed;
   top: 0;
   right: 0;
+  height: 8.5vh;
 }
 
 .current-temp-display {
-  width: 75%;
-  position: fixed;
+  width: 100%;
   right: 0;
   top: 15%;
+}
+
+.astronomy-data-display {
+  width: 100%;
+  right: 0;
+  top: 55%;
+}
+
+.data {
+  background-image: url("./components/Assets/background.jpg");
+  position: fixed;
+  width: 75%;
+  right: 0;
+  top: 8.5%;
+  height: 91.25vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.astro-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.width {
+  width: 20%;
+  border: 2px solid white;
+}
+
+.hover:hover {
+  transform: scale(1.1);
+  cursor: default;
+}
+
+.search-suggestion {
+  position: fixed;
+  top: 8%;
+  left: 26%;
+  width: 50%;
 }
